--- a/assets/www/registraConcierto.html
+++ b/assets/www/registraConcierto.html
@@ -13,13 +13,13 @@
 </head>
 <body>
 <div data-role="page" class="type-home" id="incidencias">
-	<div data-role="header"><h1>Registro de Concierto</h1><a href="#" data-rel="back">Atras</a></div>
+	<div data-role="header"><h1>Registro de Concierto</h1></div>
 	<div data-role="content" class="frmDetalleError">
 		
-  <label id="lblErrorCodigo" class="form"  for="txtErrorCodigo">Numero del Post</Label>
-  <input type="text" id="txtErrorCodigo" value="" placeholder="###" class=""    /> 
-  <label id="lblSistema" class="form"  for="txtSistema">Numero de la Galeria</Label>
-  <input type="text" id="txtSistema" value="" placeholder="Sistema" class=" "    /> 
+  <label id="lblPost" class="form"  for="txtPost">Numero del Post</Label>
+  <input type="text" id="txtPost" value="" placeholder class=""    /> 
+  <label id="lblGaleria" class="form"  for="txtGaleria">Numero de la Galeria</Label>
+  <input type="text" id="txtGaleria" value="" placeholder="" class=" "    /> 
 
 <br>
 <br>
@@ -33,21 +33,4 @@
 </body>
 </html>
 
-
-={
-    "1":1,
-    "27":2,
-    "25":3,
-    "33":5,
-    "57":6,
-    "59":7,
-    "62":8,
-    "67":9,
-    "90":15,
-    "93":16,
-    "114":20,
-    "123":22,
-    "125":23
-
-};
 
