--- a/assets/www/registraConcierto.html
+++ b/assets/www/registraConcierto.html
@@ -43,10 +43,10 @@ var params = {
 	txtGaleria:$("#txtGaleria").val()
 	}
 
-		 $.get('wsRac.php',params,function(data){
+		 $.post('wsRac.php',params,function(data){
         	debugger;
 
-        	
+
     	});
 
 	})
