JSON.parse(data)

--- a/assets/www/registraConcierto.html
+++ b/assets/www/registraConcierto.html
@@ -44,7 +44,7 @@ var params = {
 	}
 
 		 $.post('wsRac.php',params,function(data){
-        	alert(data.data);
+        	alert(JSON.parse(data).data);
         	$("#txtPost").val("");
         	$("#txtGaleria").val("");
 
